k8s/apps/ducknet/duckdotweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: duckdotweb
spec:
  rules:
  - host: duck.moe
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duckdotweb
            port:
              name: http
  - host: duck.me.uk
    http: *http_rules
  - host: luaduck.co.uk
    http: *http_rules
  tls:
  - hosts:
    - duck.moe
    - duck.me.uk
    - luaduck.co.uk
    secretName: duckdotweb-cert
